dropdown jumping fix (#263)

--- a/css/codeception.css
+++ b/css/codeception.css
@@ -132,8 +132,7 @@ body #home-hero h1 {
 }
 
 .panel-collapse-body {
-	margin-top: 1em;
-	margin-bottom: 1em;
+	padding-top: 15px;
 }
 
 .maintainer a {
